--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-sharp": "^4.11.0",
-    "gatsby-plugin-recaptcha": "2.0.3",
+    "gatsby-plugin-recaptcha": "^2.0.3",
     "prop-types": "^15.8.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "babel-preset-gatsby-package": "^2.0.0"
   },
   "keywords": [
     "gatsby"
