--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.6.2",
-    "babel-preset-gatsby-package": "^2.0.0"
+    "prettier": "^2.6.2"
   },
   "keywords": [
     "gatsby"
