--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-sharp": "^4.11.0",
-   // "gatsby-plugin-recaptcha": "^2.0.3",
+   /* "gatsby-plugin-recaptcha": "^2.0.3", */
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
