--- a/package.json
+++ b/package.json
@@ -43,4 +43,4 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
-   /* "gatsby-plugin-recaptcha": "^2.0.3", */
+   // "gatsby-plugin-recaptcha": "^2.0.3",
